[gd_scene load_steps=2 format=3 uid="uid://bho837dkjii8i"]

[ext_resource type="Script" path="res://addons/gd_local_history/ui/local_history_panel/local_history_panel.gd" id="1_5wwrs"]

[node name="LocalHistoryPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wwrs")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 450

[node name="Tree" type="Tree" parent="HSplitContainer"]
layout_mode = 2
hide_root = true

[node name="CodeEdit" type="CodeEdit" parent="HSplitContainer"]
layout_mode = 2
editable = false
scroll_smooth = true
minimap_draw = true
draw_tabs = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true

[connection signal="button_clicked" from="HSplitContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="item_selected" from="HSplitContainer/Tree" to="." method="_on_tree_item_selected"]
